--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
 
       <div class="box"></div>
     </div>
+    
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
